Fix spacing between top and bottom btn

--- a/themes/default/styles.scss
+++ b/themes/default/styles.scss
@@ -226,7 +226,7 @@ a:active {
 }
 
 .view-buttons {
-  margin-top: 60px;
+  margin-top: 40px;
 }
 
 .features-row {
